# access_gpu_with_rust

rust-cuda/: .gitignore  Cargo.toml  pyproject.toml  test_gpu.py
rust-cuda/src/: lib.rs
